related tags: fix missing backgrounds for selected tags.

--- a/app/components/tag_list_component/tag_list_component.html.scss
+++ b/app/components/tag_list_component/tag_list_component.html.scss
@@ -16,10 +16,4 @@
       margin-bottom: 1em;
     }
   }
-
-  &.simple-tag-list {
-    a {
-      display: block;
-    }
-  }
 }
